--- a/Desafios2/index.html
+++ b/Desafios2/index.html
@@ -42,7 +42,7 @@
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa
                 <a href="https://www.irinablok.com/" target="_blank" rel="next" class="externo"><em >Irina Blok</em></a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
                 <picture>
-                    <source media="(max-width: 500px)" srcset="Imagens/IrinaP.png">
+                    <source media="(max-width: 500px)" srcset="Imagens/IrinaP.jpeg">
                     <img src="imagens 2/irina-blok 2.png" alt="Idealista dos mascotes">
                 </picture>
 
