--- a/EX025/fundo2.html
+++ b/EX025/fundo2.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Meu.css">
     <title>Personalização dos fundos</title>
 </head>
 <body>
+    <h1>Teste de aplicação de fundos</h1>
     
 </body>
 </html>
