--- a/EX025/fundo4.html
+++ b/EX025/fundo4.html
@@ -7,7 +7,7 @@
     <title>Alterando o background-image</title>
     <style>
         body{
-        height: 97vh;/*Comando para mecher na viewport que é o fundo da página o background dela*/
+        height: 97vh;/*Comando para ajustar a imagem de fundo na viewport de acordo com a escala da página para encaixar corretamente*/
         background-image: url(midia/troll-face-removebg-preview\ -\ Copia.png);
         background-repeat:  no-repeat;/*Comando para anulara  reprtição de imagens neste caso no backgroud*/
         background-size: 100px;/*Comando para alterar a escala da imagem background*/
