--- a/EX025/mudando o tamanho.html
+++ b/EX025/mudando o tamanho.html
@@ -7,7 +7,7 @@
     <title>Alterando o tamanho da imagem</title>
     <style>
         body{
-            height: 98vh;/*comando para ajustar a altura do back-ground a altura da página deixando ela preenchida */
+            height: 100vh;/*comando para ajustar a altura do back-ground a altura da página deixando ela preenchida */
             background-color: black;
             background-image: url(midia/forest\ fantasy.jpg);
             background-position: center top;/*comando para dizer onde a imagem começa neste exemplo centraliza a imagem*/
@@ -15,7 +15,7 @@
             background-size: cover;/*comando para que o backgroud no caso em imagem cubra 100% da tela*/
             background-attachment: fixed;/*fixa a imagem de fundo para não ocorrer a quebra no rolamento, dessa forma quando precisar rolar o que rola é o conteudo e a imagem fica fixa*/
             
-            /*shorthand - backgorund
+            /*shorthand para aplicar o backgorund:
             
             color > image > position > repeat > size(ainda não está aplicavel mas está na regra de uso) > attachment*/
         }
