--- a/EX026/Centralização vertical de caixas.html
+++ b/EX026/Centralização vertical de caixas.html
@@ -40,8 +40,8 @@
             width: 300px;/*Alterar a largura do item*/
             background-color: brown;
 
-            top: 26%;/**/
-            left: 26%;
+            top: 26%;/*Regular a posição do item*/
+            left: 26%;/*Regular a posição do item*/
 
             margin: auto;
         }
