--- a/Desafios3/Cordel.html
+++ b/Desafios3/Cordel.html
@@ -27,7 +27,6 @@
     Antes que eu caduque<br>
     Vou dizer tudo em poesia.<br>
 </p></article>
-    <main>
         <section>
             <p>
                 Não é mais como era antes<br>
@@ -39,7 +38,6 @@
                 E um coração desenhado.<br>
             </p>
         </section>
-    </main>
 
 
 
@@ -96,15 +94,16 @@
     </main>
 
 
-<article><p>
-    Felizmente, pra orar<br>
-    Não precisa de internet<br>
-    Deus escuta todo mundo<br>
-    Se quiser, faça esse teste<br>
-    Dois pontos são dois joelhos<br>
-</p>
+<section>
+    <p>
+        Felizmente, pra orar<br>
+        Não precisa de internet<br>
+        Deus escuta todo mundo<br>
+        Se quiser, faça esse teste<br>
+        Dois pontos são dois joelhos<br>
+    </p>
+</section>
 
-        </article>
     <footer>
         Página criada por Jagarnot
 
