--- a/Desafios3/Cordel.html
+++ b/Desafios3/Cordel.html
@@ -27,15 +27,15 @@
     Antes que eu caduque<br>
     Vou dizer tudo em poesia.<br>
 </p></article>
-        <section>
+        <section class="a1">
             <p>
-                Não é mais como era antes<br>
-                É tudo abreviado<br>
-                "Você" só tem duas letras<br>
-                O "O" e o "E" foi riscado<br>
-                Para declarar o amor<br>
-                Basta botar uma flor<br>
-                E um coração desenhado.<br>
+                Não é mais como era antes
+                É tudo abreviado
+                "Você" só tem duas letras
+                O "O" e o "E" foi riscado
+                Para declarar o amor
+                Basta botar uma flor
+                E um coração desenhado.
             </p>
         </section>
 
@@ -66,15 +66,15 @@
 
 
     <main>
-        <section>
+        <section id="a2" >
             <p>
-                Tenho saudade das cartas<br>
-                Escritas com a própria mão<br>
-                Mandava no mês de Junho<br>
-                Só chegava no Verão<br>
-                Mas matava a saudade<br>
-                Era texto de verdade<br>
-                Nas linhas do coração.<br>
+                Tenho saudade das cartas
+                Escritas com a própria mão
+                Mandava no mês de Junho
+                Só chegava no Verão
+                Mas matava a saudade
+                Era texto de verdade
+                Nas linhas do coração.
             </p></section></main>
             
             
@@ -92,13 +92,14 @@
             </article>
 
 
-<section>
+<section id="a3">
     <p>
-        Felizmente, pra orar<br>
-        Não precisa de internet<br>
-        Deus escuta todo mundo<br>
-        Se quiser, faça esse teste<br>
-        Dois pontos são dois joelhos<br>
+        Felizmente, pra orar
+        Não precisa de internet
+        Deus escuta todo mundo
+        Se quiser, faça esse teste
+        Dois pontos são dois joelhos Seus lábios são aparelhos
+        Deixe que Deus interprete.
     </p>
 </section>
 
